endringer - sentrerer osv

--- a/Stein saks papir spill/stein saks papir spill.html
+++ b/Stein saks papir spill/stein saks papir spill.html
@@ -13,6 +13,7 @@
 
     <p class="title"> Stein Saks Papir</p>
 
+<div> 
     <button onclick="
       playGame('stein')
 " class="bevegelse-knapp"> <img src="bilder/stein-emoji.png" class="bilde-bevegelse"> </button>
@@ -26,7 +27,7 @@
     <button onclick="
        playGame('papir')
 " class="bevegelse-knapp"> <img src="bilder/papir-emoji.png" class="bilde-bevegelse"> </button>
-
+</div>
     <p class="js-result resultat"></p>
 
     <p class="js-moves">
