--- a/Stein saks papir spill/stein saks papir spill.html
+++ b/Stein saks papir spill/stein saks papir spill.html
@@ -34,13 +34,8 @@
 
     <p class="js-score stilling"> </p>
 
-    <button onclick="
-    score.wins = 0;
-    score.losses = 0;
-    score.ties = 0;
-    localStorage.removeItem('score');
-    updateScoreElement();
-" class="tilbakestill-stilling"> Tilbakestill stilling </button>
+    <button id="resetButton"
+    class="tilbakestill-stilling"> Tilbakestill stilling </button>
 
 
 
