endring av navn på filer

--- a/Stein saks papir spill/index.html
+++ b/Stein saks papir spill/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stein saks papir </title>
-    <link rel="stylesheet" href="stein saks papir.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -30,7 +30,7 @@
 </div>
     <p class="js-result resultat"></p>
 
-    <p class="js-moves">
+    <p  class="js-moves" >
 
     <p class="js-score stilling"> </p>
 
@@ -40,7 +40,7 @@
 
 
 
-    <script src="stein saks papir.js">
+    <script src="script.js">
 
     </script>
 </body>
